--- a/k8s/deploy-webapp.yaml
+++ b/k8s/deploy-webapp.yaml
@@ -48,7 +48,7 @@ spec:
     spec:
       containers:
       - name: webapp
-        image: fabricioveronez/imersao-gpt-webapp:v1
+        image: emersondiaspd/imersao-gpt-webapp:v1
         ports:
         - containerPort: 3000
           name: http
@@ -57,7 +57,7 @@ spec:
         - name: DATABASE_URL
           value: mysql://root:root@webapp-mysql:3306/webchat
         - name: NEXTAUTH_URL
-          value: http://a8319ee95d7fe42d783ab924aa7c8b36-765495673.us-east-1.elb.amazonaws.com/api/auth
+          value: http://localhost:3000/api/auth
         - name: NEXTAUTH_SECRET
           value: "123456"
         - name: KEYCLOAK_CLIENT_ID
@@ -65,7 +65,7 @@ spec:
         - name: KEYCLOAK_CLIENT_SECRET
           value: 6H5gI5oASmYM74HrwhdPdzVJn6uCmBsP
         - name: KEYCLOAK_ISSUER
-          value: http://aed6935ab669d403ea1eaec2f2507bb8-869034135.us-east-1.elb.amazonaws.com/realms/master
+          value: http://localhost:8080/realms/master
         - name: CHATSERVICE_URL
           value: "chatservice:50051"
 ---
